Fix: Corregir errores de compilación

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,37 @@
 <resources>
     <!-- Nombre de la app -->
-    <string name="app_name">Tienda X</string>
+    <string name="app_name">ArquiTech</string>
 
     <!-- ✅ AGREGAR ESTA LÍNEA -->
     <string name="default_notification_channel_id">default_channel</string>
+
+    <string name="company_name">ArquiTech</string>
+    <string name="company_slogan">Soluciones Arquitectónicas Integrales</string>
+    <string name="logo_arquitech_desc">Logo de ArquiTech</string>
+    <string name="our_services">Nuestros Servicios</string>
+    <string name="our_team">Nuestro Equipo</string>
+    <string name="login_register">Iniciar Sesión</string>
+    <string name="my_account">Mi Cuenta</string>
+    <string name="hero_title">Transformamos tus Ideas en Realidad</string>
+    <string name="hero_subtitle">Diseño arquitectónico profesional y soluciones integrales</string>
+
+    <!-- SERVICIOS -->
+    <string name="service_design">Diseño Arquitectónico</string>
+    <string name="service_plans">Planos Estructurales</string>
+    <string name="service_supervision">Supervisión de Obra</string>
+    <string name="service_consultancy">Consultoría</string>
+
+    <string name="service_design_desc">Planos y diseño personalizado para tu proyecto</string>
+    <string name="service_plans_desc">Planos técnicos detallados y estructurales</string>
+    <string name="service_supervision_desc">Control y calidad en construcción</string>
+    <string name="service_consultancy_desc">Asesoría especializada por hora</string>
+
+    <!-- EQUIPO -->
+    <string name="team_architect">Arquitecto Principal</string>
+    <string name="team_engineer">Ingeniero Estructural</string>
+    <string name="team_designer">Diseñador</string>
+    <string name="team_assistant">Asistente</string>
+
 
     <!-- DESCARGAS PARA ACCESIBILIDAD - NUEVAS -->
     <string name="desc_activity_icon">Icono de la actividad</string>
@@ -17,6 +45,41 @@
     <string name="desc_close_icon">Icono de cerrar</string>
     <string name="desc_delete_icon">Icono de eliminar</string>
     <string name="desc_edit_icon">Icono de editar</string>
+
+    <string name="login_title">Iniciar Sesión</string>
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Contraseña</string>
+    <string name="login_button">Iniciar Sesión</string>
+    <string name="logging_in">Iniciando sesión…</string>
+    <string name="no_account">¿No tienes cuenta?</string>
+    <string name="register_link">Regístrate</string>
+
+    <!-- Mensajes de validación y error -->
+    <string name="error_empty_fields">Por favor, completa todos los campos</string>
+    <string name="error_invalid_email">Por favor, ingresa un email válido</string>
+    <string name="login_success">Inicio de sesión exitoso</string>
+    <string name="login_error">Error en el inicio de sesión: %s</string>
+    <string name="generic_error">Error: %s</string>
+    <string name="unknown_error">Error desconocido</string>
+
+    <string name="register_title">Registro</string>
+    <string name="identification_hint">Identificación</string>
+    <string name="username_hint">Nombre de Usuario</string>
+    <string name="confirm_password_hint">Confirmar Contraseña</string>
+    <string name="register_button">Registrarse</string>
+    <string name="registering">Registrando…</string>
+    <string name="already_have_account">¿Ya tienes cuenta?</string>
+    <string name="login_link">Inicia Sesión</string>
+
+    <!-- Mensajes de validación y error para registro -->
+    <string name="error_passwords_not_match">Las contraseñas no coinciden</string>
+    <string name="error_password_length">La contraseña debe tener al menos 6 caracteres</string>
+    <string name="register_success">Registro exitoso</string>
+    <string name="register_error">Error en el registro: %s</string>
+
+    <!-- Agregar estos strings -->
+    <string name="service_image_desc">Imagen del servicio</string>
+    <string name="team_member_desc">Foto del miembro del equipo</string>
 
     <string name="service_name_sample">Diseño Arquitectónico Residencial</string>
     <string name="service_description_sample">Servicio completo de diseño y planos para viviendas residenciales. Incluye consultoría, planos arquitectónicos y seguimiento del proyecto.</string>
